--- a/src/Hooks/switch.css
+++ b/src/Hooks/switch.css
@@ -1,39 +1,3 @@
-.card {
-  background-color: rgb(6, 172, 163);
-  padding: 25px;
-  margin: 20px;
-  height: 400px;
-}
-.card-header {
-  border: 5px solid black;
-
-  text-align: center;
-  font-weight: bolder;
-  font-size: 35px;
-  width: 100%;
-
-  background: linear-gradient(45deg, orange, yellow, orange);
-}
-.card-body {
-  background-color: rgb(160, 184, 23);
-  text-align: center;
-  margin: 5px;
-  padding: 25px;
-}
-.content {
-  background-color: rgb(99, 99, 124);
-  color: white;
-  padding: 15px;
-
-  margin-left: 15 px;
-}
-.btn {
-  background-color: rgb(168, 136, 136);
-
-  margin: 5px;
-  border: 2px solid black;
-}
-
 body {
   font-family: "Arial", sans-serif;
   background-color: #f0f0f0;
@@ -48,13 +12,13 @@ body {
   text-align: center;
 }
 
-.switch-container {
+.switch1{
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.switch {
+.switch1 {
   position: relative;
   display: inline-block;
   width: 60px;
@@ -99,7 +63,7 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-.label-text {
+.label {
   margin-left: 10px;
   font-size: 1.2rem;
 }
